src/component/code_block/snapshots/envision__component__code_block__tests__single_line_render.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────┐
│hello                       │
│                            │
│                            │
└────────────────────────────┘
