src/component/code_block/snapshots/envision__component__code_block__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
fn main() {                             
    println!("hello");                  
    let x = 42;                         
    let y = x + 1;                      
    println!("{}", y);                  
    if x > 0 {                          
        return;                         
    }                                   
}
