src/component/code_block/snapshots/envision__component__code_block__tests__view_disabled.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
┌ Rust ──────────────────────────────────────────┐
│let x = 1;                                      │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
