src/component/code_block/snapshots/envision__component__code_block__tests__view_scrolled.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│line 6                                          ▲
│line 7                                          ║
│line 8                                          █
│line 9                                          ║
│line 10                                         ║
│line 11                                         ▼
└────────────────────────────────────────────────┘
