src/component/code_block/snapshots/envision__component__code_block__tests__view_with_highlight_lines.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│    1  line 1                                   │
│    2  line 2                                   │
│    3  line 3                                   │
│    4  line 4                                   │
│    5  line 5                                   │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
