src/component/code_block/snapshots/envision__component__code_block__tests__view_with_line_numbers.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
┌ Rust ──────────────────────────────────────────┐
│    1  fn main() {                              │
│    2      println!("Hello!");                  │
│    3  }                                        │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
