src/component/code_block/snapshots/envision__component__code_block__tests__view_with_rust_code.snap
---
source: src/component/code_block/tests.rs
expression: terminal.backend().to_string()
---
┌ main.rs ───────────────────────────────────────┐
│fn main() {                                     │
│    println!("Hello!");                         │
│}                                               │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
